--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node --env-file=.env --disable-warning=ExperimentalWarning --experimental-strip-types src/index.ts",
     "start:ci": "node --disable-warning=ExperimentalWarning --experimental-strip-types src/index.ts",
     "build": "tsc",
+    "typecheck": "tsc --noEmit",
     "check": "biome check",
     "fix": "biome check --write"
   },
@@ -18,7 +19,8 @@
   "dependencies": {
     "axios": "^1.4.0",
     "cheerio": "^1.0.0-rc.12",
-    "puppeteer": "^24.8.0"
+    "puppeteer": "^24.8.0",
+    "puppeteer-core": "^24.8.0"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
